--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,7 @@
 Options +FollowSymlinks
 RewriteEngine On
-RewriteRule ^index\.html$ index.php/rewriteurl/view/1/2 [L]
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d 
+RewriteRule ^(.*)$ index.php/$1 [L]
+
+
