--- a/.htaccess
+++ b/.htaccess
@@ -6,28 +6,16 @@ RewriteRule ^(.*)$ index.php/$1 [L]
 RewriteRule ^news/(.*).html$ news/$1 [L]
 
 <IfModule mod_deflate.c>
-
-AddOutputFilterByType 
-DEFLATE text/plain
-AddOutputFilterByType 
-DEFLATE text/html
-AddOutputFilterByType 
-DEFLATE text/xml
-AddOutputFilterByType 
-DEFLATE text/shtml
-AddOutputFilterByType 
-DEFLATE text/css
-AddOutputFilterByType 
-DEFLATE application/xml
-AddOutputFilterByType 
-DEFLATE application/xhtml+xml
-AddOutputFilterByType 
-DEFLATE application/rss+xml
-AddOutputFilterByType 
-DEFLATE application/javascript
-AddOutputFilterByType 
-DEFLATE application/x-javascript
-
+AddOutputFilterByType DEFLATE text/plain
+AddOutputFilterByType DEFLATE text/html
+AddOutputFilterByType DEFLATE text/xml
+AddOutputFilterByType DEFLATE text/shtml
+AddOutputFilterByType DEFLATE text/css
+AddOutputFilterByType DEFLATE application/xml
+AddOutputFilterByType DEFLATE application/xhtml+xml
+AddOutputFilterByType DEFLATE application/rss+xml
+AddOutputFilterByType DEFLATE application/javascript
+AddOutputFilterByType DEFLATE application/x-javascript
 </IfModule>
 
 
